--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.42",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -53,6 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.17",
+    "@types/react-dnd-multi-backend": "^6.0.2",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3"
   }
 }
