0809 cypress more tests done

--- a/package.json
+++ b/package.json
@@ -67,5 +67,9 @@
     "react-test-renderer": "^18.2.0",
     "redux-mock-store": "^1.5.4"
   },
-  "jest": { "transformIgnorePatterns": [ "/node_modules/(?!react-dnd|core-dnd|@react-dnd|dnd-core|react-dnd-html5-backend|react-dnd-multi-backend|react-dnd-touch-backend)" ] }
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!react-dnd|core-dnd|@react-dnd|dnd-core|react-dnd-html5-backend|react-dnd-multi-backend|react-dnd-touch-backend)"
+    ]
+  }
 }
