--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "cypress:open": "./node_modules/.bin/cypress open"
+    "cypress:open": "./node_modules/.bin/cypress open",
+    "deploy-script": "npm run build && scp -r ./build/* seriozz@51.250.103.60:/home/seriozz/stellar-frontend" 
   },
   "eslintConfig": {
     "extends": [
