--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.42",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
+    "cross-env": "^7.0.3",
     "node-fetch": "^3.2.10",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -28,13 +29,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env PORT=3008 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
     "cypress:open": "./node_modules/.bin/cypress open",
-    "deploy-script": "npm run build && scp -r ./build/* seriozz@51.250.103.60:/home/seriozz/stellar-frontend" 
+    "deploy-script": "npm run build && scp -r ./build/* seriozz@51.250.103.60:/home/seriozz/stellar-frontend"
   },
   "eslintConfig": {
     "extends": [
